<resources>
    <string name="app_name">Hoply</string>
    <string name="map_key">REDACTED</string>
    <string name="create_post">CreatePost</string>
    <string name="sign_out">Sign out</string>
    <string name="back">Back</string>
    <string name="save_changes">Save changes</string>
    <string name="enter_name">Enter name</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="post">Post</string>
    <string name="enter_username">Enter username</string>
    <string name="hoplylogo">HoplyLogo</string>
    <string name="somethingWrong">User not found</string>
    <string name="userAlreadyExists">The user already exists!</string>
    <string name="userCreated">User created, please login</string>
    <string name="locationOn">LOCATION: ON</string>
    <string name="locationOff">LOCATION: OFF</string>
    <string name="commentHint">Write your comment here…</string>
    <string name="enter_userId">Enter userID</string>
    <string name="enter_userid">Enter userID</string>
    <string name="failedToCreateUser">Failed to create user</string>
    <string name="FailedToCreateUser">Failed to create user</string>
</resources>
